2008-03-08  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Added some read and write locks at
	appropriate looking places in the GLWidget. Should help but it may
	need to be finer grained in places. Reverted - locks up a lot...

	* avogadro/src/main.cpp: Looks like some drivers have broken
	XInitThreads() functions. Only enable in threaded GL builds.

	* libavogadro/src/engines/surfaceengine.*: Just return from the render
	function if the VdW thread is running - should fix crashes.

	* libavogadro/src/glwidget.cpp: Removed the doneCurrent() calls in the
	non-threaded GL code paths. These calls were breaking hits calls  etc.

2008-03-07  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/main.cpp: Add extra GL initialisation debug output.

2008-03-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.cpp: Check that a window isn't moved
	off-screen on Mac or Windows (since we remember window positions
	on those platforms). PR#1903437.
	(saveFile) Add .cml extension to a filename if none is provided. PR#1817621.

2008-03-06  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/eyecandy.cpp: Make the eye candy solid, this
	gets rid of potentially expensive blending operations in what should
	be our quick display pipeline. Visually still looks great IMHO.

	* libavogadro/src/engine.cpp: Emit changed when the engine's status is
	changed, i.e. enabled->disabled or vice versa.

	* libavogadro/src/glwidget.*: Added a new invalidateDLs slot that
	should be called whenever the display lists need invalidating. Updated
	our display list invalidation to hopefully be more efficient.

2008-03-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/forceengine.*: Render forces on atoms. Uses
	OBConformerData, needs latest OB SVN to work.

2008-03-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Stop invalidating the cache on mouse